# cursed_vibing_on_the_fly

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
examples/: demo.py
src/cursed_vibing_on_the_fly/: __init__.py  core.py
tests/: test_core.py  test_dangerous.py
