[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursed_vibing_on_the_fly"
version = "0.1.0"
description = "Cursed decorator that implements functions by asking OpenAI what they should do."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
markers = [
    "dangerous: marks tests that make actual API calls",
]
testpaths = ["tests"]
addopts = "-m 'not dangerous'"
